# grace

./: .gitmodules  CMakeLists.txt  README.md
include/grace/: algebra.h  decorators.h  elements.h
include/grace/algebra/: adapted.h  algebra.h  control.h  join.h  reversed.h  rules.h
include/grace/algorithms/: annotations.h  dasher.h  expanser.h  segmentation.h  segments.h  shifter.h  sinker.h  stroker.h
include/grace/decorators/: caps.h  connect.h  dash.h  extrudes.h  joins.h  move.h  shifted.h  stroke.h
include/grace/elements/: arc.h  bezier.h  segment.h  vertex.h
include/grace/mediators/: Path.h
include/grace/types/: Point.h  scalars.h
